--- a/app/theme.css
+++ b/app/theme.css
@@ -146,7 +146,8 @@ body,
   border-radius: 8px 8px 0px 0px;
 }
 
-.channelTextArea-1FufC0 {
+.channelTextArea-1FufC0,
+.channelTextArea-1deLlK {
   margin-top: -8px;
   margin-bottom: 9px;
 }
@@ -569,7 +570,8 @@ div.gm-toasts > div {
   background-color: #00000007 !important;
 }
 
-.form-3gdLxP {
+.form-3gdLxP,
+.form-3qe0Ni {
   background-color: transparent !important;
   margin-top: 8px;
   right: 15px;
